unpackaged/main/default/objects/AccountBridgeAPI__x/fields/alpha_cd__c.field-meta.xml
<CustomField>
    <fullName>alpha_cd__c</fullName>
    <description>alpha_cd</description>
    <externalDeveloperName>alpha_cd</externalDeveloperName>
    <label>alpha_cd</label>
    <length>6</length>
    <type>Text</type>
</CustomField>