unpackaged/main/default/objects/AccountBridgeAPI__x/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>guid</description>
    <externalDeveloperName>guid</externalDeveloperName>
    <label>guid</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountBridgeAPI</relationshipLabel>
    <relationshipName>AccountBridgeAPI</relationshipName>
    <type>Lookup</type>
</CustomField>